--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,38 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.movie-list {
+  display: flex;
+  flex-wrap: wrap;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.movie-list_item {
+  width: 100px;
+  height: 150px;
+  overflow: hidden;
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+  background: #eee;
+  margin: 10px;
+  transition: opacity 300ms ease-in-out;
+}
+
+.movie-list_item.st-watched {
+  opacity: 0.2;
+}
+
+.movie-list_item img {
+  width: 100%;
+}
+
+.movie-list_item-button {
+  background: none;
+  border: 0;
+  cursor: pointer;
+  margin: 0;
+  padding: 0;
+}
