--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,23 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+* {
+  box-sizing: border-box;
 }
 
 .movie-list {
   display: flex;
   flex-wrap: wrap;
-  width: 90%;
+  width: 98%;
+  max-width: 840px;
   margin: 0 auto;
+  padding: 0;
 }
 
 .movie-list_item {
