--- a/src/index.css
+++ b/src/index.css
@@ -16,20 +16,44 @@ code {
 .movie-list {
   display: flex;
   flex-wrap: wrap;
-  width: 90%;
-  margin: 0 auto;
+  width: 100%;
+  margin: 0;
+  padding: 0 0 50px 0;
 }
 
 .movie-list_item {
-  width: 100px;
-  height: 150px;
+  width: 33.33333%;
   overflow: hidden;
   list-style-type: none;
   display: flex;
   justify-content: center;
   background: #eee;
-  margin: 10px;
-  transition: opacity 300ms ease-in-out;
+  padding-top: 46%;
+  overflow: hidden;
+  position: relative;
+  transition: all 300ms ease-in-out;
+
+}
+
+@media only screen and (min-width: 700px) {
+  .movie-list_item {
+    width: 25%;
+    padding-top: 36%;
+  }
+}
+
+@media only screen and (min-width: 900px) {
+  .movie-list_item {
+    width: 20%;
+    padding-top: 29%
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .movie-list_item {
+    width: 10%;
+    padding-top: 14%;
+  }
 }
 
 .movie-list_item.st-watched {
@@ -46,4 +70,89 @@ code {
   cursor: pointer;
   margin: 0;
   padding: 0;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  max-height: 100%;
+  max-width: 100%;
+}
+
+
+.nav {
+  background: white;
+  position: sticky;
+  top: 0;
+  padding: 10px 0;
+  z-index: 10;
+}
+
+.filterGroup {
+  display: flex;
+  
+}
+.filter {
+  width: 100%;
+  padding: 0 10px;
+}
+
+@media only screen and (max-width: 700px) {
+  .filterGroup {
+    flex-wrap: wrap;
+  }
+  .filter {
+    margin-bottom: 10px;
+  }
+}
+
+.actionGroup {
+  padding: 10px;
+  text-align: right;
+}
+
+.actionGroup button {
+  background: lightcoral;
+  border: 0;
+  border-radius: 3px;
+  height: 30px;
+  font-size: 15px;
+  margin-left: 10px;
+  color: white;
+  padding: 0 10px;
+  cursor: pointer;
+  transition: opacity 300ms ease-in-out;
+}
+
+.actionGroup button:hover:not(:disabled) {
+  opacity: 0.8;
+}
+
+.actionGroup button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+
+}
+
+h1 {
+  text-align: center;
+  position: fixed;
+  width: 90%;
+  padding: 10px;
+  background: lightcoral;
+  color: white;
+  font-weight: normal;
+  bottom: 0;
+  padding: 10px 5%;
+  margin: 0;
+  font-size: 20px;
+  right: 0;
+  left: 0;
+  z-index: 10;
+}
+
+.loading {
+  text-align: center;
+  margin: 100px 0;
 }
