--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,16 @@
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Helvetica Neue", Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
 
 .movie-list {
@@ -138,7 +138,7 @@ code {
 h1 {
   text-align: center;
   position: fixed;
-  width: 90%;
+  width: 100%;
   padding: 10px;
   background: lightcoral;
   color: white;
@@ -155,4 +155,44 @@ h1 {
 .loading {
   text-align: center;
   margin: 100px 0;
+}
+
+.react-autosuggest__container {
+  position: relative;
+  width: 100%;
+}
+
+.react-autosuggest__input {
+width: 100%;
+height: 30px;
+border-color: hsl(0,0%,80%);
+border-radius: 4px;
+min-height: 38px;
+border-width: 1px;
+border-style: solid;
+padding: 2px 8px;
+font-size: 16px;
+}
+
+.react-autosuggest__suggestions-container--open{
+  background:white;
+  border: 1px solid hsl(0,0%,80%);;
+  border-radius: 0 0 5px 5px;
+  width: 100%;
+  position: absolute;
+  z-index: 5
+}
+
+.react-autosuggest__suggestions-list {
+  margin: 0;
+  padding: 0;
+}
+
+.react-autosuggest__suggestion {
+  padding: 5px;
+}
+
+
+.react-autosuggest__suggestion--highlighted {
+  background: pink;
 }
